Some Improvements with Window Icon
https://github.com/stimulsoft/Stimulsoft.Reports/issues/12940

--- a/Change Theme in Avalonia/Views/MainWindow.axaml
+++ b/Change Theme in Avalonia/Views/MainWindow.axaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d" d:DesignWidth="450" d:DesignHeight="300"
         x:Class="Change_Theme_in_Avalonia.Views.MainWindow"
 		WindowStartupLocation="CenterScreen"
-        Icon="resm:Stimulsoft.Report.app.ico?assembly=Stimulsoft.Report"
+		Icon="/Assets/avalonia-logo.ico"
         Title="Change Theme in Avalonia">
 	<Grid>
 		<Grid RowDefinitions="*,12,*"
